[tool.poetry]
name = "argo-tugboat"
version = "0.1.3"
description = "Streamline your Argo Workflows with precision and confidence"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
license = "Apache-2.0"
readme = "readme.pkg.rst"
repository = "https://github.com/tzing/tugboat"
documentation = "https://argo-tugboat.readthedocs.io/en/"
packages = [{ include = "tugboat" }]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
cloup = "^3.0.5"
colorlog = "^6.9.0"
pluggy = "^1.5.0"
pydantic = "^2.9.2"
rapidfuzz = "^3.10.1"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
dirty-equals = "^0.8.0"
pyright = "^1.1.386"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.7.1"
shibuya = ">=2024.10.15"
sphinx = "^8.1.3"

[tool.poetry.scripts]
tugboat = "tugboat.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"tugboat/version.py" = ['__version__ = "{version}"']

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if typing.TYPE_CHECKING"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=tugboat --cov-report xml --cov-report term-missing"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.extend-per-file-ignores]
"tugboat/schemas/**" = ["TCH001"]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "PGH", # pygrep
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RUF", # ruff checks
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pyright]
include = ["tugboat"]
